# mlnsdk

./: CMakeLists.txt  README.md
cmake/: spdlog.cmake  struct-mapping.cmake
include/net/: boostInclude.h  boostObjectPool.hpp  byteStream.hpp  eventReceiver.hpp  exceptionHandler.hpp  logger.hpp  mlnnet_pch.h  netCommonObjects.hpp  netService.hpp  netServiceAcceptor.hpp  netServiceAcceptorTcp.hpp  netServiceConnector.hpp  netServiceConnectorTcp.hpp  netTypes.h  packetProcedure.hpp  serviceFunctions.hpp  serviceParamTypes.h  session.hpp
include/net/compression/: gzip.hpp
include/net/container/: lockfreeLinkedlist.h  reclaimer.h  rentalItemPool.hpp
include/net/enc/: packetEncType.h
include/net/http/: httpServer.hpp  httpServerCoro.hpp
include/net/mysql-legacy/: connection.hpp  options.h
include/net/mysql8/: connector.hpp
include/net/packetJson/: handler.hpp  jsonParserBoostjson.hpp  jsonParserCpprest.hpp  packetParser.hpp  protocol.h
include/net/string/: stringHelper.hpp
include/net/time/: scheduler.h  simpleScheduler.h
include/net/user/: userBase.hpp  userManagerBase.hpp  userSessionPair.hpp
mlnserver/: CMakeLists.txt  asioContext.h  main.cpp  mlnserver_pch.h  serviceEventReceiver.cpp  serviceEventReceiver.h  user.h  userManager.h
mlnserver/clientSample/: run.h  sampleConnector.h
